--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,7 @@ p {
 .main {
   display: grid;
   grid-template-columns: 300px auto;
-  grid-template-rows: 400px 400px;
+  grid-template-rows: 450px auto;
   gap: 0.5rem;
   grid-template-areas:
     'bio description'
@@ -95,6 +95,7 @@ p {
 .contact-info div {
   display: flex;
   align-items: center;
+  gap: 0.5rem;
 }
 .description {
   grid-area: description;
@@ -140,6 +141,9 @@ p {
   color: #000;
   width: 1rem;
   height: 1rem;
+  @media (prefers-color-scheme: dark) {
+    color: #fff;
+  }
 }
 
 .text-small {
