--- a/css/main.css
+++ b/css/main.css
@@ -163,6 +163,17 @@ address {
 .education {
   grid-area: education;
 }
+.profile {
+  display: flex;
+  justify-content: center;
+  flex-flow: column wrap;
+  margin: 0;
+  
+  @media (width < 1024px) {
+    flex-flow: row wrap;
+    gap: 0.5rem;
+  }
+}
 
 .profile-photo {
   width: 120px;
